syntax = "proto3";
package hipcheck.v1;

import "query.proto";

message QueryResponse {
    Query query = 1;
}
